--- a/Crawling/Python/weather_api/공공데이터포털_기상관측api.ipynb
+++ b/Crawling/Python/weather_api/공공데이터포털_기상관측api.ipynb
@@ -19,6 +19,13 @@
     "from bs4 import BeautifulSoup as bs\n",
     "import time\n",
     "import datetime\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 5일 지나고 '토요일'에 그 주 '월요일~금요일' 날짜에 해당하는 데이터 가져오기\n",
+    "now = datetime.datetime.now()\n",
+    "crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
+    "crawl_dates\n",
     "\n",
     "url = 'http://apis.data.go.kr/1360000/AsosDalyInfoService/getWthrDataList?serviceKey=70chvGVOwguGdjPrpZL063fX50H6oufjCGWQ77SQ2AL0mOHl9nzn58ipR1dB5G0rjNmt7Xhj%2FZ3pPAXRBOq5Ig%3D%3D'\n",
     "#w지역별 코드\n",
@@ -32,12 +39,13 @@
     "\n",
     "for stnld in stnlds:\n",
     "    for page in range(1,132):\n",
-    "        uri = url+\"&numOfRows=50\"+f\"&pageNo={page}\"+\"&dataCd=ASOS\"+\"&dateCd=DAY&startDt=20010205&endDt=20181230\"+f\"&stnIds={stnld}\"\n",
+    "        uri = url+\"&numOfRows=50\"+f\"&pageNo={page}\"+\"&dataCd=ASOS\"+\"&dateCd=DAY\"+f\"&startDt={crawl_dates[0]}\"+f\"&endDt={crawl_dates[-1]}\"+f\"&stnIds={stnld}\"\n",
     "        res = requests.get(uri)\n",
     "        time.sleep(3)\n",
     "        soup = bs(res.content, 'html.parser')\n",
     "        items = soup.select('item')\n",
     "        # Attribute마다 담을 빈 리스트 할당\n",
+    "        stnld_lst = []\n",
     "        date_lst = []\n",
     "        avg_ta_lst = []\n",
     "        max_ta_lst = []\n",
@@ -53,6 +61,7 @@
     "        avg_ws_lst = []\n",
     "        gr1_maxicsr_lst = []\n",
     "        for item in items:\n",
+    "            stnld = item.select_one('stnld').text\n",
     "            date = item.select_one('tm').text\n",
     "            avg_ta = item.select_one('avgta')\n",
     "            if avg_ta is None:\n",
@@ -121,6 +130,7 @@
     "                hr1_maxicsr = hr1_maxicsr.text\n",
     "\n",
     "            # 변수명에 맞게 각 리스트에 담기\n",
+    "            stnld_lst.append(stnld)\n",
     "            date_lst.append(date)\n",
     "            avg_ta_lst.append(avg_ta)\n",
     "            max_ta_lst.append(max_ta)\n",
@@ -134,7 +144,7 @@
     "            min_rhm_lst.append(min_rhm)\n",
     "            avg_rhm_lst.append(avg_rhm)\n",
     "            avg_ws_lst.append(avg_ws)\n",
-    "            gr1_maxicsr_lst.append(gr1_maxicsr)"
+    "            gr1_maxicsr_lst.append(gr1_maxicsr)\n"
    ]
   },
   {
@@ -153,18 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import time\n",
+    "import datetime\n",
+    "import pandas as pd\n",
+    "# now = datetime.datetime.now()\n",
+    "# crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "# crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
+    "date = '2012-01-03'\n",
+    "now = pd.to_datetime(date)\n",
+    "crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
     "\n",
     "url = 'http://apis.data.go.kr/1360000/AsosDalyInfoService/getWthrDataList?serviceKey=70chvGVOwguGdjPrpZL063fX50H6oufjCGWQ77SQ2AL0mOHl9nzn58ipR1dB5G0rjNmt7Xhj%2FZ3pPAXRBOq5Ig%3D%3D'\n",
     "\n",
     "for page in range(1,3):\n",
-    "        uri = url+\"&numOfRows=50\"+f\"&pageNo={page}\"+\"&dataCd=ASOS\"+\"&dateCd=DAY&startDt=20010205&endDt=20181230&stnIds=108\"\n",
+    "        uri = url+\"&numOfRows=50\"+f\"&pageNo={page}\"+\"&dataCd=ASOS\"+\"&dateCd=DAY\"+f\"&startDt={crawl_dates[0]}\"+f\"&endDt={crawl_dates[-1]}\"+\"&stnIds=108\"\n",
     "        res = requests.get(uri)\n",
     "        time.sleep(3)\n",
     "        soup = bs(res.content, 'html.parser')\n",
@@ -227,19 +246,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2001-03-27', '2001-03-28', '2001-03-29', '2001-03-30', '2001-03-31', '2001-04-01', '2001-04-02', '2001-04-03', '2001-04-04', '2001-04-05', '2001-04-06', '2001-04-07', '2001-04-08', '2001-04-09', '2001-04-10', '2001-04-11', '2001-04-12', '2001-04-13', '2001-04-14', '2001-04-15', '2001-04-16', '2001-04-17', '2001-04-18', '2001-04-19', '2001-04-20', '2001-04-21', '2001-04-22', '2001-04-23', '2001-04-24', '2001-04-25', '2001-04-26', '2001-04-27', '2001-04-28', '2001-04-29', '2001-04-30', '2001-05-01', '2001-05-02', '2001-05-03', '2001-05-04', '2001-05-05', '2001-05-06', '2001-05-07', '2001-05-08', '2001-05-09', '2001-05-10', '2001-05-11', '2001-05-12', '2001-05-13', '2001-05-14', '2001-05-15']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['2011-12-29', '2011-12-30', '2011-12-31', '2012-01-01', '2012-01-02']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(date_lst)"
+    "date_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20200605', '20200606', '20200607', '20200608', '20200609']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import pandas as pd\n",
+    "now = datetime.datetime.now()\n",
+    "crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
+    "crawl_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20111229', '20111230', '20111231', '20120101', '20120102']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = '2012-01-03'\n",
+    "now = pd.to_datetime(date)\n",
+    "crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
+    "crawl_dates"
    ]
   },
   {
@@ -378,6 +449,184 @@
     "cursor.execute(sql)\n",
     "db.commit()\n",
     "db.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lxml import etree\n",
+    "\n",
+    "import xml.etree.ElementTree as ElementTree\n",
+    "import pandas as pd # 1.0.3 version\n",
+    "import datetime\n",
+    "\n",
+    "from urllib.request import urlopen\n",
+    "from urllib.parse import urlencode, unquote, quote_plus\n",
+    "import urllib\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import time\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "crawl_dates = pd.date_range(start=now-datetime.timedelta(5), end=now-datetime.timedelta(1))\n",
+    "crawl_dates = crawl_dates.strftime(\"%Y%m%d\").tolist()\n",
+    "\n",
+    "place = []\n",
+    "date = []\n",
+    "price = []\n",
+    "\n",
+    "for date_ in crawl_dates:\n",
+    "    # service key 발급받은 후 # 을 변경\n",
+    "    request = urllib.request.Request(\"http://data.ekape.or.kr/openapi-data/service/user/grade/liveauct?serviceKey=70chvGVOwguGdjPrpZL063fX50H6oufjCGWQ77SQ2AL0mOHl9nzn58ipR1dB5G0rjNmt7Xhj%2FZ3pPAXRBOq5Ig%3D%3D&auctDate=\" +str(date_ ) +\"&auctFlag=2\")\n",
+    "\n",
+    "    time.sleep(0.3)\n",
+    "\n",
+    "    request.get_method = lambda: 'GET'\n",
+    "    response_body = urlopen(request).read()\n",
+    "\n",
+    "    tree = etree.fromstring(response_body)\n",
+    "\n",
+    "    for media in tree.getiterator('item'):\n",
+    "        place.append(media.findtext(\"abattNm\"))\n",
+    "        date.append(media.findtext(\"auctDate\"))\n",
+    "        price.append(media.findtext(\"hanwooAuctAmt\"))\n",
+    "\n",
+    "#-------------------------------------------------------------\n",
+    "# 기상관측 데이터 수집\n",
+    "#-------------------------------------------------------------\n",
+    "\n",
+    "url = 'http://apis.data.go.kr/1360000/AsosDalyInfoService/getWthrDataList?serviceKey=70chvGVOwguGdjPrpZL063fX50H6oufjCGWQ77SQ2AL0mOHl9nzn58ipR1dB5G0rjNmt7Xhj%2FZ3pPAXRBOq5Ig%3D%3D'\n",
+    "\n",
+    "#w지역별 코드\n",
+    "stnlds = [90,93,95,98,99,100,101,102,104,105,106,108,112,114,115,119,\n",
+    "         121,127,129,130,131,133,135,136,137,138,140,143,146,152,155,\n",
+    "         156,159,162,165,168,169,170,172,174,177,184,185,188,189,192,\n",
+    "         201,202,203,211,212,216,217,221,226,232,235,236,238,243,244,\n",
+    "         245,247,248,251,252,253,254,255,257,258,259,260,261,262,263,\n",
+    "         264,266,268,271,272,273,276,277,278,279,281,283,284,285,288,\n",
+    "         289,294,295]\n",
+    "\n",
+    "# weather data collect\n",
+    "for stnld in stnlds:\n",
+    "\n",
+    "    for page in range(1, 2):\n",
+    "\n",
+    "        uri = url+\"&numOfRows=50\"+f\"&pageNo={page}\"+\"&dataCd=ASOS\"+\"&dateCd=DAY\"+f\"&startDt={crawl_dates[0]}\"+f\"&endDt={crawl_dates[-1]}\"+f\"&stnIds={stnld}\"\n",
+    "        res = requests.get(uri)\n",
+    "        time.sleep(3)\n",
+    "        soup = bs(res.content, 'html.parser')\n",
+    "        items = soup.select('item')\n",
+    "\n",
+    "        # Attribute마다 담을 빈 리스트 할당\n",
+    "        stnld_lst = []\n",
+    "        date_lst = []\n",
+    "        avg_ta_lst = []\n",
+    "        max_ta_lst = []\n",
+    "        min_ta_lst = []\n",
+    "        sum_rn_lst = []\n",
+    "        sum_sshr_lst = []\n",
+    "        max_insws_lst = []\n",
+    "        max_ws_lst = []\n",
+    "        sum_gsr_lst = []\n",
+    "        avg_ts_lst = []\n",
+    "        min_rhm_lst = []\n",
+    "        avg_rhm_lst = []\n",
+    "        avg_ws_lst = []\n",
+    "        hr1_maxicsr_lst = []\n",
+    "\n",
+    "        for item in items:\n",
+    "            stnld = item.select_one('stnld')\n",
+    "            if stnld is None:\n",
+    "                stnld = None\n",
+    "            else:\n",
+    "                stnld = stnld.text\n",
+    "            date = item.select_one('tm').text\n",
+    "            avg_ta = item.select_one('avgta')\n",
+    "            if avg_ta is None:\n",
+    "                avg_ta = None\n",
+    "            else:\n",
+    "                avg_ta = avg_ta.text\n",
+    "            max_ta = item.select_one('maxta')\n",
+    "            if max_ta is None:\n",
+    "                max_ta = None\n",
+    "            else:\n",
+    "                max_ta = max_ta.text\n",
+    "            min_ta = item.select_one('minta')\n",
+    "            if min_ta is None:\n",
+    "                min_ta = None\n",
+    "            else:\n",
+    "                min_ta = min_ta.text\n",
+    "            sum_rn = item.select_one('sum_rn')\n",
+    "            if sum_rn is None:\n",
+    "                sum_rn = 0\n",
+    "            else:\n",
+    "                sum_rn = sum_rn.text\n",
+    "            sum_sshr = item.select_one('sumsshr')\n",
+    "            if sum_sshr is None:\n",
+    "                sum_sshr = None\n",
+    "            else:\n",
+    "                sum_sshr = sum_sshr.text\n",
+    "            max_insws = item.select_one('maxinsws')\n",
+    "            if max_insws is None:\n",
+    "                max_insws = None\n",
+    "            else:\n",
+    "                max_insws = max_insws.text\n",
+    "            max_ws = item.select_one('maxws')\n",
+    "            if max_ws is None:\n",
+    "                max_ws = None\n",
+    "            else:\n",
+    "                max_ws = max_ws.text\n",
+    "            sum_gsr = item.select_one('sumgsr')\n",
+    "            if sum_gsr is None:\n",
+    "                sum_gsr = None\n",
+    "            else:\n",
+    "                sum_gsr = sum_gsr.text\n",
+    "            avg_ts = item.select_one('avg_ts')\n",
+    "            if avg_ts is None:\n",
+    "                avg_ts = 0\n",
+    "            else :\n",
+    "                avg_ts = avg_ts.text\n",
+    "            min_rhm = item.select_one('minrhm')\n",
+    "            if min_rhm is None:\n",
+    "                min_rhm = None\n",
+    "            else:\n",
+    "                min_rhm = min_rhm.text\n",
+    "            avg_rhm = item.select_one('avgrhm')\n",
+    "            if avg_rhm is None:\n",
+    "                avg_rhm = None\n",
+    "            else:\n",
+    "                avg_rhm = avg_rhm.text\n",
+    "            avg_ws = item.select_one('avgws')\n",
+    "            if avg_ws is None:\n",
+    "                avg_ws = None\n",
+    "            else:\n",
+    "                avg_ws = avg_ws.text\n",
+    "            hr1_maxicsr = item.select_one('hr1maxicsr')\n",
+    "            if hr1_maxicsr is None:\n",
+    "                hr1_maxicsr = None\n",
+    "            else:\n",
+    "                hr1_maxicsr = hr1_maxicsr.text\n",
+    "\n",
+    "            # 변수명에 맞게 각 리스트에 담기\n",
+    "            stnld_lst.append(stnld)\n",
+    "            date_lst.append(date)\n",
+    "            avg_ta_lst.append(avg_ta)\n",
+    "            max_ta_lst.append(max_ta)\n",
+    "            min_ta_lst.append(min_ta)\n",
+    "            sum_rn_lst.append(sum_rn)\n",
+    "            sum_sshr_lst.append(sum_sshr)\n",
+    "            max_insws_lst.append(max_insws)\n",
+    "            max_ws_lst.append(max_ws)\n",
+    "            sum_gsr_lst.append(sum_gsr)\n",
+    "            avg_ts_lst.append(avg_ts)\n",
+    "            min_rhm_lst.append(min_rhm)\n",
+    "            avg_rhm_lst.append(avg_rhm)\n",
+    "            avg_ws_lst.append(avg_ws)\n",
+    "            hr1_maxicsr_lst.append(hr1_maxicsr)"
    ]
   },
   {
