--- a/Pandas_library/상권정보분석_리뉴얼.ipynb
+++ b/Pandas_library/상권정보분석_리뉴얼.ipynb
@@ -6344,6 +6344,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -6359,7 +6360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
