--- a/Pandas_library/프랜차이즈정보분석_리뉴얼.ipynb
+++ b/Pandas_library/프랜차이즈정보분석_리뉴얼.ipynb
@@ -2066,6 +2066,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2081,7 +2082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
