--- a/machine_learning/nlp/text_preprocessing.ipynb
+++ b/machine_learning/nlp/text_preprocessing.ipynb
@@ -328,6 +328,416 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sklearn의 CountVectorizer\n",
+    "\n",
+    "- CountVectorizer를 이용해서 텍스트를 벡터화 시키기!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The Matrix is everywhere its all around us, here even in this room.                   You can see it out your window or on your television.                   You feel it when you go to work, or go to church or pay your taxes.', 'You take the blue pill and the story ends.  You wake in your bed and you believe whatever you want to believe                  You take the red pill and you stay in Wonderland and I show you how deep the rabbit-hole goes.'] \n",
+      " 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_sample_01 = 'The Matrix is everywhere its all around us, here even in this room. \\\n",
+    "                  You can see it out your window or on your television. \\\n",
+    "                  You feel it when you go to work, or go to church or pay your taxes.'\n",
+    "text_sample_02 = 'You take the blue pill and the story ends.  You wake in your bed and you believe whatever you want to believe\\\n",
+    "                  You take the red pill and you stay in Wonderland and I show you how deep the rabbit-hole goes.'\n",
+    "text = []\n",
+    "# ;(세미콜론)이용해서 편리하게 작성\n",
+    "text.append(text_sample_01); text.append(text_sample_02)\n",
+    "print(text,'\\n', len(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- CountVectorizer에서 텍스트를 벡터화시키기 위한 함수\n",
+    "    - fit, transform함수 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# 텍스트 feature 추출\n",
+    "cnt_vect = CountVectorizer()\n",
+    "cnt_vect.fit(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse.csr.csr_matrix'> (2, 51)\n",
+      "  (0, 0)\t1\n",
+      "  (0, 2)\t1\n",
+      "  (0, 6)\t1\n",
+      "  (0, 7)\t1\n",
+      "  (0, 10)\t1\n",
+      "  (0, 11)\t1\n",
+      "  (0, 12)\t1\n",
+      "  (0, 13)\t2\n",
+      "  (0, 15)\t1\n",
+      "  (0, 18)\t1\n",
+      "  (0, 19)\t1\n",
+      "  (0, 20)\t2\n",
+      "  (0, 21)\t1\n",
+      "  (0, 22)\t1\n",
+      "  (0, 23)\t1\n",
+      "  (0, 24)\t3\n",
+      "  (0, 25)\t1\n",
+      "  (0, 26)\t1\n",
+      "  (0, 30)\t1\n",
+      "  (0, 31)\t1\n",
+      "  (0, 36)\t1\n",
+      "  (0, 37)\t1\n",
+      "  (0, 38)\t1\n",
+      "  (0, 39)\t1\n",
+      "  (0, 40)\t2\n",
+      "  :\t:\n",
+      "  (1, 1)\t4\n",
+      "  (1, 3)\t1\n",
+      "  (1, 4)\t2\n",
+      "  (1, 5)\t1\n",
+      "  (1, 8)\t1\n",
+      "  (1, 9)\t1\n",
+      "  (1, 14)\t1\n",
+      "  (1, 16)\t1\n",
+      "  (1, 17)\t1\n",
+      "  (1, 18)\t2\n",
+      "  (1, 27)\t2\n",
+      "  (1, 28)\t1\n",
+      "  (1, 29)\t1\n",
+      "  (1, 32)\t1\n",
+      "  (1, 33)\t1\n",
+      "  (1, 34)\t1\n",
+      "  (1, 35)\t2\n",
+      "  (1, 38)\t4\n",
+      "  (1, 40)\t1\n",
+      "  (1, 42)\t1\n",
+      "  (1, 43)\t1\n",
+      "  (1, 44)\t1\n",
+      "  (1, 47)\t1\n",
+      "  (1, 49)\t7\n",
+      "  (1, 50)\t1\n"
+     ]
+    }
+   ],
+   "source": [
+    "ftr_vect = cnt_vect.transform(text)\n",
+    "print(type(ftr_vect), ftr_vect.shape)\n",
+    "print(ftr_vect)\n",
+    "\n",
+    "# (0,10) 1 => 0번째행의 10번째 feature가 1번 등장이라는 의미"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 38, 'matrix': 22, 'is': 19, 'everywhere': 11, 'its': 21, 'all': 0, 'around': 2, 'us': 41, 'here': 15, 'even': 10, 'in': 18, 'this': 39, 'room': 30, 'you': 49, 'can': 6, 'see': 31, 'it': 20, 'out': 25, 'your': 50, 'window': 46, 'or': 24, 'on': 23, 'television': 37, 'feel': 12, 'when': 45, 'go': 13, 'to': 40, 'work': 48, 'church': 7, 'pay': 26, 'taxes': 36, 'take': 35, 'blue': 5, 'pill': 27, 'and': 1, 'story': 34, 'ends': 9, 'wake': 42, 'bed': 3, 'believe': 4, 'whatever': 44, 'want': 43, 'red': 29, 'stay': 33, 'wonderland': 47, 'show': 32, 'how': 17, 'deep': 8, 'rabbit': 28, 'hole': 16, 'goes': 14}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# voca속성은 CountVectorizer() 할당한 객체에 존재\n",
+    "print(cnt_vect.vocabulary_)\n",
+    "# 'the':38 => 'the'라는 단어가 38번째 인덱스에 존재"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CountVectorizer 파라미터\n",
+    "\n",
+    "- max_df : 너무 높은 빈도수를 갖는 feature(단어) 제거함\n",
+    "    * 정수 입력가능(ex. 100입력하면 전체 문서에 걸쳐 100개 이하로 나타나는 단어만 추출)\n",
+    "    * 부동소수점 입력가능(0.0~1.0 ex. 0.95입력하면 상위 0.05의 빈도수가 많은 단어들을 제외하고 추출)\n",
+    "\n",
+    "- min_df : 너무 낮은 빈도수를 갖는 feature 제거함\n",
+    "    * 정수 입력가능(ex. 2입력하면 전체문서에 걸쳐 2번 이하의 빈도수 단어 제거)\n",
+    "    * 부동소수점 입력가능(ex. 0.02입력하면 하위 0.02이하의 빈도수 단어 제거)\n",
+    "\n",
+    "- max_features : feature로 추출할 단어 개수 제한하는 최댓값\n",
+    "- stop_words : 'english'로 지정하면 영어의 불용어 추출 안함\n",
+    "\n",
+    "- ngram_range : 튜플형태로 범위를 지정함. ex.(1,2)이면 1gram, 2gram 각각 수행해서 추출. 2gram만 할려면 (2,2)로 지정\n",
+    "\n",
+    "- analyzer : feature로 추출할 단위 지정 디폴트는 word\n",
+    "- token_pattern : 토큰화 수행하는 패턴 지정. 디폴트는 word인데 변경할 경우 별로 없음. 그리고 어근 추출시 해당 인자에 외부함수를 넣어주어 어근 추출도 동시에 가능함.\n",
+    "\n",
+    "- lower_case : 모든 문자를 소문자로 변경. 디폴트는 True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 2)\t1\n",
+      "  (1, 3)\t2\n",
+      "  (1, 0)\t2\n",
+      "  (1, 1)\t1\n",
+      "  (1, 4)\t1 \n",
+      " (2, 5)\n",
+      "{'matrix': 2, 'pill': 3, 'believe': 0, 'deep': 1, 'rabbit': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 영어 불용어 제거하고 최대 feature추출개수 5개로 제한\n",
+    "cnt_vect = CountVectorizer(max_features=5, stop_words='english')\n",
+    "ftr_vect = cnt_vect.fit_transform(text)\n",
+    "print(ftr_vect,'\\n', ftr_vect.shape)\n",
+    "print(cnt_vect.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 82, 'matrix': 49, 'is': 42, 'everywhere': 25, 'its': 47, 'all': 0, 'around': 6, 'us': 94, 'here': 32, 'even': 23, 'in': 38, 'this': 88, 'room': 67, 'you': 110, 'can': 15, 'see': 69, 'it': 44, 'out': 57, 'your': 120, 'window': 104, 'or': 53, 'on': 51, 'television': 80, 'feel': 27, 'when': 102, 'go': 29, 'to': 90, 'work': 108, 'church': 17, 'pay': 59, 'taxes': 79, 'the matrix': 84, 'matrix is': 50, 'is everywhere': 43, 'everywhere its': 26, 'its all': 48, 'all around': 1, 'around us': 7, 'us here': 95, 'here even': 33, 'even in': 24, 'in this': 39, 'this room': 89, 'room you': 68, 'you can': 112, 'can see': 16, 'see it': 70, 'it out': 45, 'out your': 58, 'your window': 124, 'window or': 105, 'or on': 55, 'on your': 52, 'your television': 123, 'television you': 81, 'you feel': 113, 'feel it': 28, 'it when': 46, 'when you': 103, 'you go': 114, 'go to': 30, 'to work': 93, 'work or': 109, 'or go': 54, 'to church': 92, 'church or': 18, 'or pay': 56, 'pay your': 60, 'your taxes': 122, 'take': 77, 'blue': 13, 'pill': 61, 'and': 2, 'story': 75, 'ends': 21, 'wake': 96, 'bed': 8, 'believe': 10, 'whatever': 100, 'want': 98, 'red': 65, 'stay': 73, 'wonderland': 106, 'show': 71, 'how': 36, 'deep': 19, 'rabbit': 63, 'hole': 34, 'goes': 31, 'you take': 117, 'take the': 78, 'the blue': 83, 'blue pill': 14, 'pill and': 62, 'and the': 4, 'the story': 87, 'story ends': 76, 'ends you': 22, 'you wake': 118, 'wake in': 97, 'in your': 41, 'your bed': 121, 'bed and': 9, 'and you': 5, 'you believe': 111, 'believe whatever': 11, 'whatever you': 101, 'you want': 119, 'want to': 99, 'to believe': 91, 'believe you': 12, 'the red': 86, 'red pill': 66, 'you stay': 116, 'stay in': 74, 'in wonderland': 40, 'wonderland and': 107, 'and show': 3, 'show you': 72, 'you how': 115, 'how deep': 37, 'deep the': 20, 'the rabbit': 85, 'rabbit hole': 64, 'hole goes': 35}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ngram_range 해보기\n",
+    "cnt_vect = CountVectorizer(ngram_range=(1,2))\n",
+    "ftr_vect = cnt_vect.fit_transform(text)\n",
+    "print(cnt_vect.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 희소행렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### COO 형식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "dense = np.array([[3,0,1],\n",
+    "                [0,2,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0, 1],\n",
+       "       [0, 2, 0]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import sparse\n",
+    "# 0이 아닌 값들 추출\n",
+    "data = np.array([3,1,2])\n",
+    "\n",
+    "# 행위치와 열 위치를 각각 array로 생성\n",
+    "row_pos = np.array([0,0,1])\n",
+    "col_pos = np.array([0,2,1])\n",
+    "\n",
+    "# sparse의 패키지의 coo_matrix 이용해서 COO형식의 희소행렬 생성\n",
+    "sparse_coo = sparse.coo_matrix((data, (row_pos, col_pos)))\n",
+    "# 희소행렬 생성한후 array형태로 만들어줘야 출력 가능함\n",
+    "dense_1 = sparse_coo.toarray()\n",
+    "dense_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CSR 형식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COO 변환된 데이터가 제대로 되었는지 다시 Dense로 출력 확인\n",
+      "[[0 0 1 0 0 5]\n",
+      " [1 4 0 3 2 5]\n",
+      " [0 6 0 3 0 0]\n",
+      " [2 0 0 0 0 0]\n",
+      " [0 0 0 7 0 8]\n",
+      " [1 0 0 0 0 0]]\n",
+      "CSR 변환된 데이터가 제대로 되었는지 다시 Dense로 출력 확인\n",
+      "[[0 0 1 0 0 5]\n",
+      " [1 4 0 3 2 5]\n",
+      " [0 6 0 3 0 0]\n",
+      " [2 0 0 0 0 0]\n",
+      " [0 0 0 7 0 8]\n",
+      " [1 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import sparse\n",
+    "\n",
+    "dense2 = np.array([[0,0,1,0,0,5],\n",
+    "             [1,4,0,3,2,5],\n",
+    "             [0,6,0,3,0,0],\n",
+    "             [2,0,0,0,0,0],\n",
+    "             [0,0,0,7,0,8],\n",
+    "             [1,0,0,0,0,0]])\n",
+    "\n",
+    "# 0 이 아닌 데이터 추출\n",
+    "data2 = np.array([1, 5, 1, 4, 3, 2, 5, 6, 3, 2, 7, 8, 1])\n",
+    "\n",
+    "# 행 위치와 열 위치를 각각 array로 생성 \n",
+    "row_pos = np.array([0, 0, 1, 1, 1, 1, 1, 2, 2, 3, 4, 4, 5])\n",
+    "col_pos = np.array([2, 5, 0, 1, 3, 4, 5, 1, 3, 0, 3, 5, 0])\n",
+    "\n",
+    "# COO 형식으로 변환 \n",
+    "sparse_coo = sparse.coo_matrix((data2, (row_pos,col_pos)))\n",
+    "\n",
+    "# 행 위치 배열의 고유한 값들의 시작 위치 인덱스를 배열로 생성\n",
+    "row_pos_ind = np.array([0, 2, 7, 9, 10, 12, 13])\n",
+    "\n",
+    "# CSR 형식으로 변환 \n",
+    "sparse_csr = sparse.csr_matrix((data2, col_pos, row_pos_ind))\n",
+    "\n",
+    "print('COO 변환된 데이터가 제대로 되었는지 다시 Dense로 출력 확인')\n",
+    "print(sparse_coo.toarray())\n",
+    "print('CSR 변환된 데이터가 제대로 되었는지 다시 Dense로 출력 확인')\n",
+    "print(sparse_csr.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 2)\t1\n",
+      "  (0, 5)\t5\n",
+      "  (1, 0)\t1\n",
+      "  (1, 1)\t4\n",
+      "  (1, 3)\t3\n",
+      "  (1, 4)\t2\n",
+      "  (1, 5)\t5\n",
+      "  (2, 1)\t6\n",
+      "  (2, 3)\t3\n",
+      "  (3, 0)\t2\n",
+      "  (4, 3)\t7\n",
+      "  (4, 5)\t8\n",
+      "  (5, 0)\t1\n",
+      "\n",
+      "  (0, 2)\t1\n",
+      "  (0, 5)\t5\n",
+      "  (1, 0)\t1\n",
+      "  (1, 1)\t4\n",
+      "  (1, 3)\t3\n",
+      "  (1, 4)\t2\n",
+      "  (1, 5)\t5\n",
+      "  (2, 1)\t6\n",
+      "  (2, 3)\t3\n",
+      "  (3, 0)\t2\n",
+      "  (4, 3)\t7\n",
+      "  (4, 5)\t8\n",
+      "  (5, 0)\t1\n"
+     ]
+    }
+   ],
+   "source": [
+    "dense3 = np.array([[0,0,1,0,0,5],\n",
+    "             [1,4,0,3,2,5],\n",
+    "             [0,6,0,3,0,0],\n",
+    "             [2,0,0,0,0,0],\n",
+    "             [0,0,0,7,0,8],\n",
+    "             [1,0,0,0,0,0]])\n",
+    "\n",
+    "coo = sparse.coo_matrix(dense3)\n",
+    "csr = sparse.csr_matrix(dense3)\n",
+    "print(coo)\n",
+    "print()\n",
+    "print(csr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -352,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
