--- a/machine_learning/recommendation/latent-based_recommendation.ipynb
+++ b/machine_learning/recommendation/latent-based_recommendation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +65,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 행렬\n",
+      " [[ 4. nan nan  2. nan]\n",
+      " [nan  5. nan  3.  1.]\n",
+      " [nan nan  3.  4.  4.]\n",
+      " [ 5.  2.  1.  2. nan]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('원본 행렬\\n', R)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +103,6 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "def get_rmse(R, P, Q, non_zeros):\n",
-    "    error = 0 # 이거는 왜..?\n",
     "    # 두개의 분해된 행렬 P와 Q의 전치행렬 냐적으로 예측행렬 R' 생성\n",
     "    R_ = np.dot(P, Q.T)\n",
     "    \n",
@@ -222,8 +242,7 @@
     "    np.random.seed(1)\n",
     "    P = np.random.normal(scale=1./K, size=(num_users, K))\n",
     "    Q = np.random.normal(scale=1./K, size=(num_items, K))\n",
-    "    \n",
-    "    break_count = 0 \n",
+    "     \n",
     "    # NaN값이 아닌 값들과 인덱스 추출\n",
     "    non_zeros = [(i, j, R[i, j]) for i in range(num_users) for j in range(num_items) if R[i, j] > 0]\n",
     "    \n",
