--- a/machine_learning/recommendation/Python_surprise.ipynb
+++ b/machine_learning/recommendation/Python_surprise.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,11 +470,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "from surprise.dataset import DatasetAutoFolds\n",
+    "from surprise.dataset import Reader\n",
     "\n",
     "reader = Reader(line_format='user item rating timestamp', sep=',',\n",
     "               rating_scale=(0.5, 5))\n",
@@ -490,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fd6f8ddc250>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fdddfe39c50>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -529,6 +530,7 @@
    "source": [
     "# 영화에 대한 정보 데이터 로딩\n",
     "movies = pd.read_csv('movies.csv')\n",
+    "ratings = pd.read_csv('ratings.csv')\n",
     "# 특정 사용자 9번의 movieId를 추출해서 특정 영화에 대한 평점 있는지 확인\n",
     "movieIds = ratings[ratings['userId']==9]['movieId']\n",
     "if movieIds[movieIds==42].count() == 0:\n",
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +573,7 @@
     "    # 특정 유저가 본 movie id들을 리스트로 할당\n",
     "    seen_movies = ratings[ratings['userId']==userId]['movieId'].tolist()\n",
     "    # 모든 영화들의 movie id들 리스트로 할당\n",
-    "    total_movies = ratings['movieId'].tolist()\n",
+    "    total_movies = movies['movieId'].tolist()\n",
     "    \n",
     "    # 모든 영화들의 movie id들 중 특정 유저가 본 movie id를 제외한 나머지 추출\n",
     "    unseen_movies = [movie for movie in total_movies if movie not in seen_movies]\n",
@@ -583,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,84 +611,59 @@
     "    # 위 3가지를 튜플로 담기\n",
     "    # zip함수를 사용해서 각 자료구조(여기선 리스트)의 똑같은 위치에있는 값들을 mapping\n",
     "    # zip함수는 참고로 여러개의 문자열의 똑같은 위치들끼리 mapping도 가능!\n",
-    "    top_movie_preds = [(id, rating, title) for id, rating, title in zip(top_movie_ids, top_movie_ratings, top_movie_titles)]\n",
+    "    top_movie_preds = [(ids, rating, title) for ids, rating, title in zip(top_movie_ids, top_movie_ratings, top_movie_titles)]\n",
     "    \n",
     "    return top_movie_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Prediction(uid='9', iid='1', r_ui=None, est=3.614981936119299, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='3', r_ui=None, est=3.1030030037384773, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='6', r_ui=None, est=3.8859075039668283, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='47', r_ui=None, est=3.9224716681863776, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='50', r_ui=None, est=4.020778401261599, details={'was_impossible': False})]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions = [algo.predict(str(9), str(movieId)) for movieId in unseen_movies]\n",
-    "predictions[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Prediction(uid='9', iid='750', r_ui=None, est=4.322402915230924, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='750', r_ui=None, est=4.322402915230924, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='750', r_ui=None, est=4.322402915230924, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='750', r_ui=None, est=4.322402915230924, details={'was_impossible': False}),\n",
-       " Prediction(uid='9', iid='750', r_ui=None, est=4.322402915230924, details={'was_impossible': False})]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def sortkey_est(pred):\n",
-    "    return pred.est\n",
-    "predictions.sort(key=sortkey_est, reverse=True)\n",
-    "predictions[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "특정 유저가 본 영화 수:  46 추천한 영화 개수:  98855 전체 영화수:  100836\n",
+      "특정 유저가 본 영화 수:  46 추천한 영화 개수:  9696 전체 영화수:  9742\n",
       "\n",
       "######## Top-10 추천영화 리스트 ########\n",
       "* 추천 영화 이름:  Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1964)\n",
       "* 해당 영화의 예측평점:  4.322402915230924\n",
+      "\n",
+      "* 추천 영화 이름:  Philadelphia Story, The (1940)\n",
+      "* 해당 영화의 예측평점:  4.172423325516417\n",
+      "\n",
+      "* 추천 영화 이름:  Rear Window (1954)\n",
+      "* 해당 영화의 예측평점:  4.160378620971996\n",
+      "\n",
+      "* 추천 영화 이름:  His Girl Friday (1940)\n",
+      "* 해당 영화의 예측평점:  4.100292470156683\n",
+      "\n",
+      "* 추천 영화 이름:  Boot, Das (Boat, The) (1981)\n",
+      "* 해당 영화의 예측평점:  4.095329442967445\n",
+      "\n",
+      "* 추천 영화 이름:  Seventh Seal, The (Sjunde inseglet, Det) (1957)\n",
+      "* 해당 영화의 예측평점:  4.063138824378056\n",
+      "\n",
+      "* 추천 영화 이름:  Boogie Nights (1997)\n",
+      "* 해당 영화의 예측평점:  4.062524326115693\n",
+      "\n",
+      "* 추천 영화 이름:  Life Is Beautiful (La Vita è bella) (1997)\n",
+      "* 해당 영화의 예측평점:  4.049268225445741\n",
+      "\n",
+      "* 추천 영화 이름:  Guess Who's Coming to Dinner (1967)\n",
+      "* 해당 영화의 예측평점:  4.04578027089272\n",
+      "\n",
+      "* 추천 영화 이름:  There Will Be Blood (2007)\n",
+      "* 해당 영화의 예측평점:  4.039674899262282\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "unseen_movies = get_unseen_surprise(ratings, movies, 9)\n",
-    "top_movies_preds = recomm_movie_by_surprise(algo, 9, unseen_movies,\n",
+    "unseen_lst = get_unseen_surprise(ratings, movies, 9)\n",
+    "top_movies_preds = recomm_movie_by_surprise(algo, 9, unseen_lst,\n",
     "                                           top_n=10)\n",
     "print()\n",
     "print('#'*8,'Top-10 추천영화 리스트','#'*8)\n",
@@ -697,43 +674,6 @@
     "    print('* 해당 영화의 예측평점: ', top_movie[1])\n",
     "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [1,5,17,6,8,19,55]\n",
-    "a.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 5, 6, 8, 17, 19, 55]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
