--- a/machine_learning/recommendation/Python_surprise.ipynb
+++ b/machine_learning/recommendation/Python_surprise.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,12 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from surprise.dataset import DatasetAutoFolds\n",
     "from surprise.dataset import Reader\n",
+    "from surprise import SVD\n",
     "\n",
     "reader = Reader(line_format='user item rating timestamp', sep=',',\n",
     "               rating_scale=(0.5, 5))\n",
@@ -491,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fdddfe39c50>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fd619414b10>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,15 +578,14 @@
     "    \n",
     "    # 모든 영화들의 movie id들 중 특정 유저가 본 movie id를 제외한 나머지 추출\n",
     "    unseen_movies = [movie for movie in total_movies if movie not in seen_movies]\n",
-    "    print('특정 유저가 본 영화 수: ', len(seen_movies),\n",
-    "         '추천한 영화 개수: ', len(unseen_movies), '전체 영화수: ', len(total_movies))\n",
+    "    print(f'특정 {userId}번 유저가 본 영화 수: {len(seen_movies)}\\n추천한 영화 개수: {len(unseen_movies)}\\n전체 영화수: {len(total_movies)}')\n",
     "    \n",
     "    return unseen_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,14 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "특정 유저가 본 영화 수:  46 추천한 영화 개수:  9696 전체 영화수:  9742\n",
+      "특정 9번 유저가 본 영화 수: 46\n",
+      "추천한 영화 개수: 9696\n",
+      "전체 영화수: 9742\n",
       "\n",
       "######## Top-10 추천영화 리스트 ########\n",
       "* 추천 영화 이름:  Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1964)\n",
@@ -674,6 +676,13 @@
     "    print('* 해당 영화의 예측평점: ', top_movie[1])\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
